# operadic-consistency

./: .gitignore  README.md  pyproject.toml
operadic_consistency/core/: consistency.py  evaluate.py  interfaces.py  metrics.py  serialization.py  toq_types.py  transforms.py
operadic_consistency/magnet/: __init__.py  backends.py  predictor.py
tests/: test_consistency.py  test_decomposer_entrypoint.py  test_evaluate.py  test_interfaces.py  test_magnet_predictor.py  test_metrics.py  test_serialization.py  test_tiny_examples.py  test_toq_types.py  test_transforms.py
