[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "operadic_consistency"
version = "0.1.0"
description = "Operadic consistency engine for Trees of Questions"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "numpy>=1.24",
]
magnet = [
    "numpy>=1.24",
    "together>=1.3",
    "magnet @ git+https://github.com/AIQ-Kitware/aiq-magnet.git",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["operadic_consistency*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ""
